--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
   <property name="build.dir" location="build" />
   <property name="build.tmp" location="${build.dir}/tmp/TextGenGen" />
   <property name="build.layout" location="${build.dir}/artifacts/TextGenGen" />
-  <property name="mps_home" location="${basedir}/../../MPS 2021.2" />
+  <property name="mps_home" location="${basedir}/../../../Library/Application Support/JetBrains/Toolbox/apps/MPS/ch-0/212.5284.1234/MPS 2021.2.app/Contents" />
   <property name="TEXTGENGEN_HOME" location="${basedir}" />
   <property name="artifacts.mps" location="${mps_home}" />
   <property file="${artifacts.mps}/build.properties" prefix="import.mps" />
@@ -32,14 +32,14 @@
   <target name="assemble" depends="classes, declare-mps-tasks">
     <mkdir dir="${build.layout}" />
     <mkdir dir="${build.tmp}/default/TextGenGen.zip" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen/META-INF" />
-    <echoxml file="${build.tmp}/default/TextGenGen.zip/TextGenGen/META-INF/plugin.xml">
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/META-INF" />
+    <echoxml file="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/META-INF/plugin.xml">
       <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
         <id>TextGenGen</id>
-        <name>TextGenGen</name>
+        <name>TextGenGen (fum)</name>
         <description>Plugin for generation of the TextGen aspect from the Editor aspect aiming for generation of source code in the same form as the presentation rendered by the Editor.</description>
-        <version>2021.2</version>
+        <version>2021.2 (fum)</version>
         <depends>jetbrains.mps.core</depends>
         <description>Editor to TextGen convertor</description>
         <vendor>JetBrains</vendor>
@@ -50,33 +50,33 @@
         </extensions>
       </idea-plugin>
     </echoxml>
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen/lib" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib" />
+    <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar" />
+    <mkdir dir="${build.tmp}/default/TextGenGen (fum).jar/META-INF" />
+    <echoxml file="${build.tmp}/default/TextGenGen (fum).jar/META-INF/plugin.xml">
+      <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
+        <id>TextGenGen</id>
+        <name>TextGenGen (fum)</name>
+        <description>Plugin for generation of the TextGen aspect from the Editor aspect aiming for generation of source code in the same form as the presentation rendered by the Editor.</description>
+        <version>2021.2 (fum)</version>
+        <depends>jetbrains.mps.core</depends>
+        <description>Editor to TextGen convertor</description>
+        <vendor>JetBrains</vendor>
+        <idea-version since-build="212.1" until-build="213.1" />
+        
+        <extensions defaultExtensionNs="com.intellij">
+          <mps.LanguageLibrary dir="/languages" />
+        </extensions>
+      </idea-plugin>
+    </echoxml>
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/lib/TextGenGen (fum).jar" duplicate="preserve">
+      <fileset dir="${build.tmp}/default/TextGenGen (fum).jar" />
+    </jar>
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages" />
+    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen" />
     <mkdir dir="${build.tmp}/default/TextGenGen.jar" />
     <mkdir dir="${build.tmp}/default/TextGenGen.jar/META-INF" />
-    <echoxml file="${build.tmp}/default/TextGenGen.jar/META-INF/plugin.xml">
-      <idea-plugin xmlns:xi="http://www.w3.org/2001/XInclude">
-        <id>TextGenGen</id>
-        <name>TextGenGen</name>
-        <description>Plugin for generation of the TextGen aspect from the Editor aspect aiming for generation of source code in the same form as the presentation rendered by the Editor.</description>
-        <version>2021.2</version>
-        <depends>jetbrains.mps.core</depends>
-        <description>Editor to TextGen convertor</description>
-        <vendor>JetBrains</vendor>
-        <idea-version since-build="212.1" until-build="213.1" />
-        
-        <extensions defaultExtensionNs="com.intellij">
-          <mps.LanguageLibrary dir="/languages" />
-        </extensions>
-      </idea-plugin>
-    </echoxml>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen/lib/TextGenGen.jar" duplicate="preserve">
-      <fileset dir="${build.tmp}/default/TextGenGen.jar" />
-    </jar>
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen/languages" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.zip/TextGenGen/languages/TextGenGen" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.jar1" />
-    <mkdir dir="${build.tmp}/default/TextGenGen.jar1/META-INF" />
-    <echoxml file="${build.tmp}/default/TextGenGen.jar1/META-INF/module.xml">
+    <echoxml file="${build.tmp}/default/TextGenGen.jar/META-INF/module.xml">
       <module namespace="TextGenGen" type="solution" uuid="2429ba7e-dca6-48f7-8628-d00e9ac44245">
         <dependencies>
           <module ref="6354ebe7-c22a-4a0f-ac54-50b52ab9b065(JDK)" kind="rt" />
@@ -129,16 +129,16 @@
         <sources jar="TextGenGen-src.jar" descriptor="TextGenGen.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen/languages/TextGenGen/TextGenGen.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/TextGenGen" />
       <fileset dir="${TEXTGENGEN_HOME}/java_src/EditorToText_IDEA/src" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
       <fileset dir="${TEXTGENGEN_HOME}/solutions/TextGenGen/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
-      <fileset dir="${build.tmp}/default/TextGenGen.jar1" />
+      <fileset dir="${build.tmp}/default/TextGenGen.jar" />
     </jar>
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-TextGenGen-models">
       <fileset dir="${TEXTGENGEN_HOME}/solutions/TextGenGen/models" includes="**/*.mps, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen/languages/TextGenGen/TextGenGen-src.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/TextGenGen.zip/TextGenGen (fum)/languages/TextGenGen/TextGenGen-src.jar" duplicate="preserve">
       <fileset dir="${TEXTGENGEN_HOME}/java_src/EditorToText_IDEA/src">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
