--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-build
+# Gradle
+build.properties
+build/
+.idea/
+.gradle/
+.mps-caches/
 
 # MPS
 workspace.xml
-
 classes_gen
 source_gen
 source_gen.caches
