--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
   <property name="build.layout" location="${build.dir}/artifacts/TextGenGen" />
   <property name="mps_home" location="${basedir}/build/mps-bundle/Contents" />
   <property name="project_home" location="${basedir}" />
-  <property name="dependencies_home" location="${basedir}/build/mps-bundle/" />
+  <property name="dependencies_home" location="${basedir}/build/mps-bundle/dependencies" />
   <property name="TEXTGENGEN_HOME" location="${basedir}" />
   <property name="artifacts.mps" location="${mps_home}" />
   <property name="artifacts.de.itemis.mps.extensions" location="${dependencies_home}" />
