Project: build editorToText as a JAR file, which is compatible with the ANT generate-task
Motivation: see issue:
MPS-33503 The "generate" task cannot handle java source stub models correctly (a minimalistic test case included)

--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,22 @@ task prepareMps {
     dependsOn buildOsSpecificBundle
 }
 
+// due to MPS-33503 The "generate" task cannot handle java source stub models correctly (a minimalistic test case included)
+// we have to compile the java sources and include class files in MPS, to make our build from CLI work
+task assembleEditorToTextJar(type: Exec) {
+    def javaFiles = fileTree("$projectDir/java_src/EditorToText_IDEA").matching {
+        include "**/*.java"
+    }.collect { it.toString() }
+    commandLine "$javaHome/bin/javac", "-d", "$buildDir/java_src"
+    args javaFiles
+    doLast {
+        ant.jar(destfile: "$projectDir/java_src/lib/editorToText.jar", basedir: "$buildDir/java_src")
+    }
+}
+
 task mpsBuild {
     group 'mps'
-    dependsOn 'mpsAntGenerate', 'mpsAntBuild'
+    dependsOn 'mpsAntGenerate', 'mpsAntBuild', assembleEditorToTextJar
 }
 
 task mpsClean {
