Build: fix Project Name in GitHub actions

--- a/.github/workflows/github-actions-release.yaml
+++ b/.github/workflows/github-actions-release.yaml
@@ -6,7 +6,7 @@ on:
       - '*.*.*'
 
 env:
-  PROJECT_NAME: "Fumapps-textGenGen"
+  PROJECT_NAME: "TextGenGen"
   LANGUAGE_NAME: "TextGenGen"
 
 jobs:
