--- a/.github/workflows/workflow-build.yaml
+++ b/.github/workflows/workflow-build.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 env:
-  PROJECT_NAME: "Fumapps-textGenGen"
+  PROJECT_NAME: "TextGenGen"
   LANGUAGE_NAME: "TextGenGen"
 
 jobs:
