--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
+ext.languageName = "TextGenGen"
 ext.mpsVersion = "2021.2.4"
 ext.mpsPlugins = [ "de.slisson.mps.editor.multiline" : 13253,
                    "de.itemis.mps.extensions.build": 17136 ]
 
-apply from: 'gradle/download-mps.gradle'
-apply from: 'gradle/run-mps-ant.gradle'
+apply from: 'gradle/init-gradle-scripts.gradle'
 
 task prepareMps {
     group 'mps'
@@ -46,20 +46,4 @@ task openProjectInMps {
 task buildAndOpenProjectInMps {
     group 'mps'
     dependsOn mpsBuild, openProjectInMps
-}
-
-task downloadGradleScripts {
-    group 'mps'
-
-    doLast {
-        ["download-mps.gradle", "run-mps-ant.gradle"].each {
-            def gradleScriptFile = file("$projectDir/gradle/$it")
-            gradleScriptFile.parentFile.mkdirs()
-            def url = new URL("https://github.com/vimotest/mps-gradle-scripts/raw/main/gradle/$it")
-            url.withInputStream {
-                inputStream -> gradleScriptFile.withOutputStream { outputStream -> outputStream << inputStream }
-            }
-            gradleScriptFile.text = "/* This file is downloaded from $url */\n\n${gradleScriptFile.text}"
-        }
-    }
 }
